Added results button

--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -1,6 +1,7 @@
 <h1>Abba Party at the O2</h1>
 <h4>What dates suite you?</h4>
+<%= link_to 'Results so far', surveys_path, class: "btn btn-primary white" %>
 
 <%= render 'form', survey: @survey %>
 
-<%#= link_to 'Back', surveys_path %>
+
