--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -43,4 +43,5 @@
 </p>
 
 <%= link_to 'Change your Dates', edit_survey_path(@survey), class: "btn btn-primary white" %>
-<%= link_to 'Exit', complete_path, class: "btn btn-primary" %>
+<%= link_to 'View Results', surveys_path, class: "btn btn-primary white" %>
+<%= link_to 'Exit', complete_path, class: "btn btn-primary white" %>
