--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -3,4 +3,5 @@
 <%= render 'form', survey: @survey %>
 
 <%= link_to 'Show', @survey %> 
+<%= link_to 'View Results', surveys_path, class: "btn btn-primary white" %>
 <%= link_to 'Exit', complete_path, class: "btn btn-primary" %>
