--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Surveys</h1>
+<h1>Results</h1>
 
 <table class="table">
   <thead>
@@ -38,4 +38,4 @@
 
 <br>
 
-<%= link_to 'New Survey', new_survey_path %>
+<%= link_to 'New Survey', new_survey_path, class: "btn btn-primary white" %>
